# thot

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  configure.in  index.html  index.html.bak  params.json  reconf
doc/: Makefile.am  doxygen_src.cfg
examples/: Makefile.am  thot_check_installation.sh
examples/cfg_templates/: Makefile.am  thot_basic.cfg
examples/ini_files/: Makefile.am  datrie.ini  ibm2.ini  interplm.ini  kenlm.ini  legacy.ini  refact.ini  standard.ini  standard_ibm2.ini  wer.ini
examples/toy_corpus/: Makefile.am  dev.sp  en.dev  en.test  en.train  en_tok.dev  en_tok.test  en_tok.train  en_tok_lc.dev  en_tok_lc.test  en_tok_lc.train  sp.dev  sp.test  sp.train  sp_tok.dev  sp_tok.test  sp_tok.train  sp_tok_lc.dev  sp_tok_lc.test  sp_tok_lc.train  test.sp
src/: Makefile.am
src/datrie/: Makefile.am  thot_darray.c  thot_darray.h  thot_fileutils.c  thot_tail.c  thot_tail.h  thot_trie.c  thot_trie.h  trie.c
src/downhill_simplex/: step_by_step_dhs.c  step_by_step_dhs.h  thot_dhs_step_by_step_min.cc
src/error_correction/: BaseEcModelForNbUcat.h  BaseEcmForWg.h  BaseEditDist.h  BaseErrorCorrectingModel.cc  BaseErrorCorrectingModel.h  BaseErrorCorrectionModel.cc  BaseErrorCorrectionModel.h  BaseWgProcessorForAnlp.h  EditDistForStr.cc  EditDistForStr.h  EditDistForVec.h  EditDistForVecString.cc  EditDistForVecString.h  HypStateIndex.h  Makefile.am  NbSearchHighLevelHyp.h  NbSearchHyp.h  NbSearchStack.cc  NbSearchStack.h  NbestCorrections.h  NonPbEcModelForNbUcat.cc  NonPbEcModelForNbUcat.h  NonPbEcModelForNbUcatFactory.cc  PfsmEcm.cc  PfsmEcm.h  PfsmEcmForWg.cc  PfsmEcmForWg.h  PfsmEcmForWgEsi.h  PfsmEcmForWgFactory.cc  PrefAlignInfo.h  RejectedWordsSet.h  WgHandler.cc  WgHandler.h  WgProcessorForAnlp.h  WgProcessorForAnlpPfsmFactory.cc  WordAndCharLevelOps.h  WordGraph.cc  WordGraph.h  WordGraphArc.h  WordGraphArcId.h  (+6 more)
src/hat_trie/: Makefile.am  htrie_hash.h
src/incr_models/: BaseIncrCondProbModel.h  BaseIncrCondProbTable.h  BaseIncrEncCondProbModel.h  BaseIncrEncoder.h  BaseWordPenaltyModel.h  CacheIncrJelMerNgramLM.cc  CacheIncrJelMerNgramLM.h  CacheLmIncrCpTable.cc  CacheLmIncrCpTable.h  FileHistInfo.h  FileNgTable.cc  FileNgTable.h  IncrCondProbTable.h  IncrEncoder.h  IncrInterpNgramLM.cc  IncrInterpNgramLM.h  IncrInterpNgramLMFactory.cc  IncrInterpONgramLM.cc  IncrInterpONgramLM.h  IncrJelMerLevelDbNgramLM.cc  IncrJelMerLevelDbNgramLM.h  IncrJelMerLevelDbNgramLMFactory.cc  IncrJelMerNgramLM.cc  IncrJelMerNgramLM.h  IncrJelMerNgramLMFactory.cc  IncrNgramLM.cc  IncrNgramLM.h  LevelDbNgramTable.cc  LevelDbNgramTable.h  Makefile.am  StlNgtComponent.cc  StlNgtComponent.h  WordPenaltyModel.cc  WordPenaltyModel.h  WordPenaltyModelFactory.cc  WordPredictor.cc  WordPredictor.h  _incrEncCondProbModel.h  _incrInterpEncCondProbModel.h  _incrInterpNgramLM.cc  (+15 more)
src/kenlm/: KenLm.cc  KenLm.h  KenLmFactory.cc  Makefile.am
src/nlp_common/: AwkInputStream.cc  AwkInputStream.h  BackoffNode.h  BaseIncrNgramLM.h  BaseNgramLM.h  BasicSocketUtils.cc  BasicSocketUtils.h  BidTrie.h  Bitset.h  ClassDic.cc  ClassDic.h  Count.h  DynClassFileHandler.cc  DynClassFileHandler.h  ErrorDefs.h  KenLm.cc  KenLm.h  KenLmFactory.cc  LM_Defs.h  LogCount.h  LogSafe.h  Makefile.am  MathDefs.h  MathFuncs.cc  MathFuncs.h  ModelDescriptorUtils.cc  ModelDescriptorUtils.h  NbestTableNode.h  NbestTransTable.h  OrderedVector.h  PositionIndex.h  Prob.cc  Prob.h  Score.h  SimpleDynClassLoader.h  SimpleTrie.h  SingleWordVocab.cc  SingleWordVocab.h  SmtDefs.h  StatModelDefs.h  (+33 more)
src/phrase_models/: AligInfo.h  AlignmentContainer.cc  AlignmentContainer.h  AlignmentExtractor.cc  AlignmentExtractor.h  BaseCountPhraseModel.h  BaseIncrPhraseModel.cc  BaseIncrPhraseModel.h  BasePhraseModel.cc  BasePhraseModel.h  BasePhrasePairFilter.h  BasePhraseTable.h  BdbPhraseModel.cc  BdbPhraseModel.h  BdbPhraseModelFactory.cc  BdbPhraseTable.cc  BdbPhraseTable.h  Bisegm.h  BpSet.cc  BpSet.h  BpSetInfo.h  Cache_ct_.cc  Cache_ct_.h  Cache_lct_.cc  Cache_lct_.h  CategPhrasePairFilter.cc  CategPhrasePairFilter.h  CellAlignment.h  CellID.h  DaTriePhraseModel.cc  DaTriePhraseModel.h  DaTriePhraseModelFactory.cc  DaTriePhraseTable.cc  DaTriePhraseTable.h  FastBdbPhraseModel.cc  FastBdbPhraseModel.h  FastBdbPhraseModelFactory.cc  FastBdbPhraseTable.cc  FastBdbPhraseTable.h  FilePm.cc  (+80 more)
src/picojson/: Makefile.am
src/print_utils/: Makefile.am  StdCerrThreadSafePrint.h  StdCerrThreadSafeTidPrint.h  ThreadSafePrint.h
src/smt_preproc/: BasePrePosProcessor.h  EU_PrePosProcessor1.cc  EU_PrePosProcessor1.h  EU_PrePosProcessor2.cc  EU_PrePosProcessor2.h  Makefile.am  SmtPreprocDefs.h  SmtPreprocLmTypes.h  XRCE_PrePosProcessor1.cc  XRCE_PrePosProcessor1.h  XRCE_PrePosProcessor2.cc  XRCE_PrePosProcessor2.h  XRCE_PrePosProcessor3.cc  XRCE_PrePosProcessor3.h  XRCE_PrePosProcessor4.cc  XRCE_PrePosProcessor4.h  postprocess.h  preprocess.h
src/stack_dec/: AssistedTransTypes.h  BaseAssistedTrans.h  BaseHypState.cc  BaseHypState.h  BaseHypothesis.h  BaseHypothesisRec.h  BaseLogLinWeightUpdater.h  BaseMiraScorer.h  BasePbTransModel.h  BasePbTransModelFeature.h  BasePbTransModelStats.h  BasePhraseHypothesis.h  BasePhraseHypothesisRec.h  BaseScorer.h  BaseSmtModel.h  BaseSmtModelFeature.h  BaseSmtMultiStack.h  BaseSmtStack.h  BaseStackDecoder.h  BaseTranslationConstraints.h  BaseTranslationMetadata.h  CatDefs.h  CustomFeatureHandler.cc  CustomFeatureHandler.h  DictFeat.cc  DictFeat.h  DictFeatPhrScoreInfoFactory.cc  DirectPhraseModelFeat.cc  DirectPhraseModelFeat.h  DynClassFactoryHandler.cc  DynClassFactoryHandler.h  FeatureHandler.cc  FeatureHandler.h  FeaturesInfo.h  HypDebugData.h  HypSortCriterion.h  HypStateDict.h  HypStateDictData.h  InversePhraseModelFeat.cc  InversePhraseModelFeat.h  (+187 more)
src/sw_models/: BaseSentLengthModel.h  BaseSentenceHandler.h  BaseStepwiseAligModel.h  (+96 more)
utils/: .copy_thot_pkg_files.sh  .gen_thot_pkg_am_vars.sh  .git_add_thot_pkg_files.sh  .git_rm_thot_pkg_files.sh  .modify_thot_prg_file.sh  .modify_thot_script_file.sh  Makefile.am  pkg_list.txt  prog_list.txt  script_list.txt
(+174 files in other folders)
